# ros-control

./: .clang-format  README.md
scripts/: can.sh  clean.sh  comm.sh  network.sh  usb.sh
src/control_node/: CMakeLists.txt  package.xml
src/control_node/config/: control_params.yaml  hardware_settings.yaml
src/control_node/framework/: CMakeLists.txt
src/control_node/framework/include/: dji_motor.h  exception.h  hal_can.h  hal_usbcdc.h  mahony_ahrs.h  mecanum.h  pid.h  remote_control.h  thread_pool.hpp  typedefs.h  utils.hpp
src/control_node/framework/src/: dji_motor.cc  exception.cc  hal_can.cc  hal_usbcdc.cc  mahony_ahrs.c  mahony_ahrs.cc  mecanum.cc  pid.cc  remote_control.cc  utils.cc
src/control_node/include/: control_node.hpp
src/control_node/launch/: control_node.launch.py  skider_hw.launch.py
src/control_node/src/: can_polling_thread.cc  control_node.cc  control_thread.cc  usbcdc_polling_therad.cc  usbcdc_polling_thread.cc
